Fixed nav errors, aligning, and started fetch api

--- a/style.css
+++ b/style.css
@@ -77,18 +77,7 @@ header {
     }
 }
 
-/* Line for nav bar */
-.navBar:before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 0;
-    width: 20%;
-    height: 4px;
-    background: #ddd;
-    transform: translateY(-50%);
-    z-index: 0;
-}
+
 
 /* Main Content */
 main {
@@ -175,12 +164,11 @@ main {
 }
 
 #cont {
-    position: absolute;
+    
     border: transparent;
     border-radius: 10px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.51);;
-    margin-top: 35vw;
-    margin-left: 50vw;
+    margin-top: 25px;
     padding: 30px 90px;
     font-size: 30px;
     background-color: var(--thir);
@@ -223,7 +211,7 @@ hr:not(.fulfilled) {
 
 /* old- - bring this back if needed */
 
-/* .education-content {
+ .education-content {
     align-content: space-between;
     flex-direction: column;
     gap: 25px;
@@ -235,6 +223,7 @@ hr:not(.fulfilled) {
     position: relative;
 } 
 
+/*
 .edu {
     display: flex;
     margin-left: 45%;
